--- a/UnityAnimations.CSharp.csproj
+++ b/UnityAnimations.CSharp.csproj
@@ -113,9 +113,12 @@
     <Compile Include="Assets\Cinemachine\Blackboard\Reactor.cs" />
     <Compile Include="Assets\Cinemachine\Examples\Scenes\Scripting\ScriptingExample.cs" />
     <Compile Include="Assets\Cinemachine\Examples\Shared\Scripts\CinemachineExampleWindow.cs" />
+    <Compile Include="Assets\Cinemachine\Timeline\CameraSwitcher.cs" />
+    <Compile Include="Assets\Cinemachine\Timeline\CameraSwitcherTrack.cs" />
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineMixer.cs" />
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineShot.cs" />
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineTrack.cs" />
+    <Compile Include="Assets\Clients\GraphVisualizerClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
