--- a/UnityAnimations.CSharp.csproj
+++ b/UnityAnimations.CSharp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineMixer.cs" />
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineShot.cs" />
     <Compile Include="Assets\Cinemachine\Timeline\CinemachineTrack.cs" />
+    <Compile Include="Assets\Cinemachine\Timeline\PlayableBehaviourSample.cs" />
     <Compile Include="Assets\Clients\GraphVisualizerClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
